[package]
name = "pmemkv-sys"
version = "0.1.0-alpha.0"
authors = ["Zhiting Zhu <zhitingz@cs.utexas.edu>"]
edition = "2018"
keywords = ["pmdk", "bindings"]
license = "BSD3"
repository = "https://github.com/photoszzt/pmemkv-rs/tree/master/pmemkv-sys"
homepage = "https://github.com/photoszzt/pmemkv-rs"

[dependencies]

[build-dependencies]
bindgen="0.49"

[lib]
name = "pmemkv-sys"
