[package]
name = "pmemkv"
version = "0.1.1-alpha.0"
authors = ["Zhiting Zhu <zhitingz@cs.utexas.edu>"]
edition = "2018"
keywords = ["pmdk", "bindings"]
license = "BSD-3-Clause"
repository = "https://github.com/photoszzt/pmemkv-rs/tree/master/pmemkv"
homepage = "https://github.com/photoszzt/pmemkv-rs"
description= "Rust high-level binding to pmemkv"


[dependencies]
pmemkv-sys = { path = "../pmemkv-sys", version = "0.1.0-alpha.0" }
error-chain = "0.12"

[lib]
name = "pmemkv"
